tests/baselines/reference/superCallBeforeThisAccessing2(strict=true).errors.txt
superCallBeforeThisAccessing2.ts(2,17): error TS7006: Parameter 'c' implicitly has an 'any' type.
superCallBeforeThisAccessing2.ts(5,13): error TS7008: Member '_t' implicitly has an 'any' type.


==== superCallBeforeThisAccessing2.ts (2 errors) ====
    class Base {
        constructor(c) { }
                    ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    }
    class D extends Base {
        private _t;
                ~~
!!! error TS7008: Member '_t' implicitly has an 'any' type.
        constructor() {
            super(() => { this._t }); // no error. only check when this is directly accessing in constructor
        }
    }
    